# craw-rs

./: .env  .gitignore  Cargo.toml  Makefile  README  README.md
.github/workflows/: rust.yml
migrations/: 20250123185359_create_users_table.sql
src/: main.rs
src/actors/: chat_server.rs  chat_session.rs  mod.rs
src/handlers/: chat.rs  echo.rs  login.rs  mod.rs  register.rs  ws.rs
src/middleware/: auth.rs
src/models/: claims.rs  mod.rs  user.rs
