[package]
name = "craw"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
argon2 = "0.5.3"
dotenv = "0.15.0"
futures-util = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.32", features = ["full"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
